# lcars-os-app

./: .gitignore  BUILD-INSTRUCTIONS.md  README.md  build.sh  create-icon.py  index.html  lcars-os.html
frontend/: index.html
lcars-metrics/: Cargo.toml
lcars-metrics/src/: main.rs
lcars-os-electron/: main.js  package.json  preload.js
lcars-os-tauri/: Cargo.toml  Info.plist  tauri.conf.json
lcars-os-tauri/capabilities/: default.json
lcars-os-tauri/helpers/: dictation_helper.swift
lcars-os-tauri/icons/: icon.icns
lcars-os-tauri/src/: main.rs
