[package]
name = "lcars-os"
version = "1.0.0"
description = "LCARS OS — Voyager Edition"
authors = ["Barry"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.31"
dirs = "5"
